# mishikallm

./: .env  .env.example  .pre-commit-config.yaml  Dockerfile  Dockerfile.database  Makefile  README.md  codecov.yaml  docker-compose.yml  index.yaml  package-lock.json  package.json  prometheus.yml  proxy_server_config.yaml  pyproject.toml  pyrightconfig.json  render.yaml  requirements.txt  ruff.toml  security.md
.circleci/: config.yml
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  (+2 more)
mishikallm-proxy-extras/: README.md  pyproject.toml
mishikallm-proxy-extras/mishikallm_proxy_extras/: _logging.py  schema.prisma  utils.py
mishikallm-proxy-extras/mishikallm_proxy_extras/migrations/20250326162113_baseline/: migration.sql
mishikallm-proxy-extras/mishikallm_proxy_extras/migrations/20250326171002_add_daily_user_table/: migration.sql
mishikallm-proxy-extras/mishikallm_proxy_extras/migrations/20250327180120_add_api_requests_to_daily_user_table/: migration.sql
mishikallm-proxy-extras/mishikallm_proxy_extras/migrations/20250329084805_new_cron_job_table/: migration.sql
mishikallm-proxy-extras/mishikallm_proxy_extras/migrations/20250331215456_track_success_and_failed_requests_daily_agg_table/: migration.sql
mishikallm-proxy-extras/mishikallm_proxy_extras/migrations/20250411215431_add_managed_file_table/: migration.sql
mishikallm-proxy-extras/mishikallm_proxy_extras/migrations/20250412081753_team_member_permissions/: migration.sql
mishikallm-proxy-extras/mishikallm_proxy_extras/migrations/20250415151647_add_cache_read_write_tokens_daily_spend_transactions/: migration.sql
mishikallm-proxy-extras/mishikallm_proxy_extras/migrations/20250415191926_add_daily_team_table/: migration.sql
mishikallm-proxy-extras/mishikallm_proxy_extras/migrations/20250416115320_add_tag_table_to_db/: migration.sql
(+1706 files in other folders)
